--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@angular/http": "^4.4.6",
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.0.0",
-    "@bds/nt-angular-context": "^1.0.40",
+    "@bds/nt-context": "^1.0.40",
     "@bds/nt-entities": "0.0.1",
     "@ng-idle/core": "2.0.0-beta.12",
     "@ng-idle/keepalive": "2.0.0-beta.12",
@@ -112,7 +112,6 @@
     "@angular/http": "^4.4.6",
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.0.0",
-    "@bds/nt-angular-context": "^1.0.40",
     "@bds/nt-entities": "0.0.1"
   },
   "distDependencies": {
