--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "node-sass": "^4.7.2",
-    "package-dist-creator": "latest",
+    "@bds/package-dist-creator": "latest",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "rxjs": "^5.3.1",
